# bazel-scratch

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  package.json  pnpm-lock.yaml  tsconfig.json
protos/: BUILD.bazel
src/: BUILD.bazel  example.proto  in.ts  rewritten_in.ts
src/js-proto/: BUILD.bazel
tools/: BUILD.bazel  rewrite_imports.sh
