load("@rules_proto//proto:defs.bzl", "proto_library")
load("@aspect_rules_ts//ts:proto.bzl", "ts_proto_library")

proto_library(
    name = "proto",
    srcs = ["example.proto"],
    visibility = ["//visibility:public"],
)

ts_proto_library(
    name = "connect",
    copy_files = False,
    node_modules = "//:node_modules",
    proto = ":proto",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "connect_types",
    srcs = [":connect"],
    output_group = "types",
    visibility = ["//visibility:public"],
)
