load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")

genrule(
    name = "rewritten_connect",
    outs = ["example_connect.js", "example_pb.js"],
    srcs = ["//protos:connect"],
    cmd = "./$(location //tools:rewrite_imports) \"$(RULEDIR)\" \"$(SRCS)\"",
    tools = ["//tools:rewrite_imports"],
)

copy_to_bin(
    name = "rewritten_connect_types",
    srcs = ["//protos:connect_types"],
)

js_library(
    name = "rewritten_jsinfo",
    declarations = [":rewritten_connect", ":rewritten_connect_types"],
    deps = [
        "//:node_modules/@bufbuild/protobuf"
    ],
    visibility = ["//visibility:public"],
)
